# research_assistant

./: .env.example  .gitignore  AI_PROMPTS.md  README.md  checkpointing.py  config.py  demo.py  graph.py  llm.py  main.py  observability.py  pyproject.toml  requirements.txt  state.py
agents/: clarity.py  research.py  synthesis.py  validator.py
app/: __init__.py  graph.py  llm.py
app/agents/: __init__.py  clarity.py  research.py  synthesis.py  validator.py
app/tools/: mcp_tavily.py  search.py
app/utils/: hitl.py
research_assistant.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_integration_mocked.py  test_routing.py
tools/: __init__.py  mcp_tavily.py  search.py
utils/: __init__.py  display.py  hitl.py
